<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_fill">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/background"
        android:scaleType="fitStart"
        android:contentDescription="@string/background_image_desc"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:textColor="@android:color/white"
        android:textSize="13sp"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_hint"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/backgroundImage"
            android:layout_alignStart="@+id/backgroundImage"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_below="@+id/usernameField"
            android:layout_alignLeft="@+id/backgroundImage"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignLeft="@+id/backgroundImage" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>



</RelativeLayout>
